--- a/style.css
+++ b/style.css
@@ -1,7 +1,42 @@
+body {
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+header {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    border-bottom: 1px solid rgb(192, 192, 192);
+    position: fixed;
+    z-index: 2;
+    background-color: white;
+}
+
+.logo {
+    width: 100%;
+    padding-left: 20px;
+    padding-top: 20px;
+}
+
+.nav {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding-left: 20px;
+}
+
+.items1 p{
+    display: inline-block;
+}
 
 .container-faq {
-    font-family: 'Roboto', sans-serif;;
-    width: 1000px;
+    max-width: 1000px;
     height: 100%;
     margin: 0 auto;
+    padding-top: 200px;
 }
